# chesssouls

./: CMakeLists.txt  README.md
beginner/: CMakeLists.txt  main.cpp
chesssouls/: CMakeLists.txt  main.cpp
greedy_player/: CMakeLists.txt  main.cpp
libchesssouls/: CMakeLists.txt  bitboard.cpp  bitboard.h  book.cpp  book.h  eval.cpp  eval.h  eval_table.cpp  eval_table.h  hash.cpp  hash.h  king.cpp  king.h  libchesssouls_api.h  movegen.cpp  movegen.h  movepick.cpp  movepick.h  notation.cpp  notation.h  pawn.cpp  pawn.h  perft.cpp  perft.h  position.cpp  position.h  rand.h  search.cpp  search.h  test.cpp  test.h  trans.cpp  trans.h  types.h
libchesssouls.tests/: CMakeLists.txt  test.cpp  test_eval.cpp  test_eval.h  test_movegen.cpp  test_movegen.h  test_position.cpp  test_position.h  test_search.cpp  test_search.h
random_player/: CMakeLists.txt  main.cpp
testsets/: CCR.txt
